--- a/binding/org.openhab.binding.northq/ESH-INF/i18n/northqbinding_xx_XX.properties
+++ b/binding/org.openhab.binding.northq/ESH-INF/i18n/northqbinding_xx_XX.properties
@@ -1,13 +1,13 @@
 # FIXME: please substitute the xx_XX with a proper locale, ie. de_DE
 # FIXME: please do not add the file to the repo if you add or change no content
 # binding
-binding.northqbinding.name = <Your localized Binding name>
-binding.northqbinding.description = <Your localized Binding description>
+binding.northq.name = <Your localized Binding name>
+binding.northq.description = <Your localized Binding description>
 
 # thing types
-thing-type.northqbinding.sample.label = <Your localized Thing label>
-thing-type.northqbinding.sample.description = <Your localized Thing description>
+thing-type.northq.sample.label = <Your localized Thing label>
+thing-type.northq.sample.description = <Your localized Thing description>
 
 # channel types
-channel-type.northqbinding.sample-channel.label = <Your localized Channel label>
-channel-type.northqbinding.sample-channel.description = <Your localized Channel description>
+channel-type.northq.sample-channel.label = <Your localized Channel label>
+channel-type.northq.sample-channel.description = <Your localized Channel description>
